--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .project
 .cproject
 Debug
-Firmware/Configuration_prusa.h
 Firmware/Doc
 /Firmware/.vs/Firmware/v14
 /Firmware/__vm
@@ -52,3 +51,6 @@ Firmware/Doc
 /Firmware/Firmware.vcxproj
 /Firmware/Configuration_prusa_bckp.h
 /Firmware/variants/printers.h
+/Firmware/.vscode
+/Firmware/libraries
+/libraries
